--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-and-test:
     name: Build and Test
-    runs-on: macos-14 # Uses Apple Silicon runner
+    runs-on: macos-14
     
     steps:
       - name: Checkout
@@ -22,12 +22,11 @@ jobs:
         run: xcodegen generate
 
       - name: Build and Test
-        # 'platform=iOS Simulator' is required because GitHub runners don't have physical iPhones
+        # REMOVED: -clean (Not needed on CI, and caused the syntax error)
         run: |
           xcodebuild test \
             -project SLAMRecorder.xcodeproj \
             -scheme SLAMRecorder \
             -destination 'platform=iOS Simulator,name=iPhone 15' \
-            -clean \
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO
