--- a/project.yml
+++ b/project.yml
@@ -11,6 +11,8 @@ targets:
         PRODUCT_BUNDLE_IDENTIFIER: com.brett.SLAMRecorder
         MARKETING_VERSION: 1.0
         CURRENT_PROJECT_VERSION: 1
+        DEVELOPMENT_TEAM: ${TEAM_ID} 
+        CODE_SIGN_STYLE: Automatic
     info:
       path: SLAMRecorder/Info.plist
       properties:
