--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,18 @@ on:
     branches: [ "main" ]
 
 jobs:
+  python-tests:
+    name: Python Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: prefix-dev/setup-pixi@v0.8.1
+        with:
+          pixi-version: v0.39.0
+          cache: true
+      - name: Run Tests
+        run: pixi run test
+
   build-and-test:
     name: Build and Test
     runs-on: macos-15
