Add Android project setup and multi-camera support
- Created `strings.xml` for app string resources including app name and recording messages.
- Added `themes.xml` to define the app theme with transparent status and navigation bars.
- Implemented unit tests for multi-camera support in `MultiCamSupportCheckerTest.kt`.
- Set up Gradle build files with necessary plugins and properties for Android development.
- Updated Gradle wrapper to version 8.10.2 and added related files.
- Enhanced documentation for environment setup and Android coverage using Kover.
- Updated `pixi.lock` and `pixi.toml` to include dependencies for OpenJDK and Gradle.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: iOS CI
+name: CI
 
 on:
   push:
@@ -110,3 +110,44 @@ jobs:
             coverage.json
             coverage_report.txt
             ./DerivedData/Logs/Test/*.xcresult
+
+  android-build-test:
+    name: Android Build, Lint, Test
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: android
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
+          cache: "gradle"
+
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
+        with:
+          cmdline-tools-version: "latest"
+          components: |-
+            platform-tools
+            platforms;android-35
+            build-tools;35.0.0
+
+      - name: Gradle Wrapper Validation
+        uses: gradle/actions/wrapper-validation@v3
+
+      - name: Build and Test
+        run: ./gradlew spotlessCheck :app:assembleDebug :app:testDebugUnitTest :app:koverXmlReport
+
+      - name: Upload Test Reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: android-test-reports
+          path: |
+            android/app/build/reports/tests/testDebugUnitTest
+            android/app/build/reports/kover/xml/report.xml
